<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            android:src="@drawable/nav_menu_header_bg"
            app:srcCompat="@drawable/nav_menu_header_bg"
            android:contentDescription="@string/header_cover_image" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:clickable="true"
            app:civ_border_width="3dp"
            app:civ_border_color="#FFFFFFFF"
            android:id="@+id/profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/man"
            android:focusable="true" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="#ebca0707"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_edit"
                android:layout_alignParentEnd="true"
                android:focusable="true"
                android:contentDescription="@string/edit_button" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                tools:text="Ashish Kumar"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/designation"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                tools:text="New Delhi"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                tools:text="(Student)"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_layout"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:text="@string/education"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                android:focusable="true"
                android:layout_marginStart="25dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:text="@string/work"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:focusable="true"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:text="@string/dob"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:focusable="true"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:text="@string/marriage"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:focusable="true"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/gender"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView22"
                android:focusable="true"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="@string/blood_group"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:focusable="true" />

            <TextView
                android:id="@+id/blood_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                tools:text="O+"
                app:layout_constraintLeft_toRightOf="@+id/textView10"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                tools:text="17/06/1996"
                android:layout_margin="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/marriage"
                app:layout_constraintLeft_toRightOf="@+id/textView16"
                android:focusable="true"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/marriage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                tools:text="Single"
                app:layout_constraintLeft_toRightOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/gender"
                android:layout_marginStart="8dp"
                android:focusable="true" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                tools:text="Male"
                app:layout_constraintLeft_toRightOf="@+id/textView11"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/mobileNumber"
                android:focusable="true"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                tools:text="Student"
                app:layout_constraintLeft_toRightOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginStart="5dp"
                android:focusable="true" />

            <TextView
                android:id="@+id/mobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                tools:text="9899602986"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/occupation"
                app:layout_constraintLeft_toRightOf="@+id/textView22"
                android:focusable="true"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                tools:text="ashishkumar160@gmail.com"
                app:layout_constraintLeft_toRightOf="@+id/textView27"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/dob"
                android:focusable="true"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/email"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/textView16"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:focusable="true"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/mobile"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintLeft_toLeftOf="parent"
                android:focusable="true"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                tools:text="B.Tech"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintLeft_toRightOf="@+id/textView5"
                android:layout_marginLeft="8dp"
                android:focusable="true"
                android:layout_marginStart="8dp" />

        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</ScrollView>